--- a/walabot/.env
+++ b/walabot/.env
@@ -1,6 +1,8 @@
 export APP_X=50
 export APP_Y=50
-export IP_OUT=192.168.165.149
+export IP_OUT=1.1.1.1
 export PORT_OUT=8000
+export IP_IN=192.168.3.3
+export PORT_IN=9000
 export DEVICE_NAME=walabot_1 
 export CHANNEL_NAME=position
